# clarity-prompt

./: .gitignore  Dockerfile.dev  README.md  compose.yml  group_init.bsh  manage.py  pipx_init.bsh  pyproject.toml  user_init.bsh
cprompt/darulez/: admin.py  api.py  apps.py  models.py  tasks.py  tests.py
cprompt/darulez/migrations/: 0001_initial.py  0002_application_status_alter_documentrule_action.py  0003_documentrequest_rule.py  0004_application_user.py
cprompt/project/: api.py  asgi.py  settings.py  urls.py  wsgi.py
